2016-08-04  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* interpolate.tcl: Correct the calculation of the weight for interpolation - cast to double
	* interpolate.test: Added test for this change
	* statistics.test: Correct the ANOVA tests (use -result)
	* linalg.test: Added test to show that permuted linear systems give the same result

2016-04-12  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* geometry.tcl: Replace the algorithm in pointInsidePolygon (ticket dc49af96c2), also add an alternative
	                method based on the winding number
	* geometry.test: Add the new test case for this ticket and adjust the outcome for an edge case (hour glass).
	                Further tests added for the alternative method and for some edge cases

2015-11-14  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.tcl: Add test-anova-F
	* pdf_stat.tcl: Add cdf-F
	* statistics.test: Add tests for test-anova-F and cdf-F
	* statistics.man: Describe test-anova-F and cdf-F
	* geometry.tcl: Implement translation, rotation, reflection and conversion to/from radians and degrees
	* geometry.test: Add tests for translation, rotation and reflection and conversion radians/degrees
	* math_geometry.tcl: Describe the new procedures
	* special.man: Correct description of Beta and Gamma functions

2015-04-29  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.tcl: Add test-Duckworth
	* pdf_stat.tcl: Add empirical-distribution
	* statistics.test: Add tests for test-Duckworth and empirical-distribution
	* statistics.man: Describe test-Duckworth and empirical-distribution

2015-04-28  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.tcl: Bump version to 1.0 - Aku found the cause of earlier problems

2015-04-26  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.tcl: Bump version to 0.9.3
	                  Implemented an alternative to histogram (ticket 1502400fff)